--- a/C2/C2W1_Assignment.ipynb
+++ b/C2/C2W1_Assignment.ipynb
@@ -175,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 52,
       "metadata": {
         "cellView": "code",
         "id": "F-QkLjxpmyK2"
@@ -217,13 +217,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 53,
       "metadata": {
         "id": "5dhtL344OK00",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "59c57ca4-9db7-4e6e-e5be-042049ac33a3"
+        "outputId": "f7a845fa-e5d4-4153-bc5b-d7c973e1f3f0"
       },
       "outputs": [
         {
@@ -303,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 62,
       "metadata": {
         "cellView": "code",
         "id": "zvSODo0f9LaU"
@@ -314,17 +314,21 @@
         "def split_data(SOURCE, TRAINING, TESTING, SPLIT_SIZE):\n",
         "\n",
         "  ### START CODE HERE\n",
-        "  list_images = os.listdir(SOURCE)\n",
-        "  for image in list_images:\n",
-        "    if os.path.getsize(os.path.join(SOURCE, image)) == 0:\n",
+        "  list_images = []\n",
+        "  for image in os.listdir(SOURCE):\n",
+        "    if os.path.getsize(os.path.join(SOURCE, image)) > 0:\n",
+        "      list_images.append(image)\n",
+        "    else:\n",
         "      print(f\"{image} is zero length, so ignoring.\")\n",
-        "      list_images.remove(image)\n",
         "  \n",
-        "  list_training_images = random.sample(list_images, int(SPLIT_SIZE*len(list_images)))\n",
+        "  n = len(list_images)\n",
+        "  list_shuffled_images = random.sample(list_images, n)\n",
+        "  \n",
+        "  list_training_images = list_shuffled_images[:int(SPLIT_SIZE*n)]\n",
         "  for image in list_training_images:\n",
         "    copyfile(os.path.join(SOURCE, image), os.path.join(TRAINING, image))\n",
         "\n",
-        "  list_testing_images = [image for image in list_images if image not in list_training_images]\n",
+        "  list_testing_images = list_shuffled_images[int(SPLIT_SIZE*n):]\n",
         "  for image in list_testing_images:\n",
         "    copyfile(os.path.join(SOURCE, image), os.path.join(TESTING, image))\n",
         "\n",
@@ -334,13 +338,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 63,
       "metadata": {
         "id": "FlIdoUeX9S-9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c21ccdea-d9f8-42b0-890c-c05e7de9ae85"
+        "outputId": "6da5fb6f-443b-46e1-a334-3d11a086de4d"
       },
       "outputs": [
         {
