--- a/C2/C2W4_Assignment.ipynb
+++ b/C2/C2W4_Assignment.ipynb
@@ -193,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 79,
       "metadata": {
         "cellView": "code",
         "id": "EO3u5NIhdNgE",
@@ -220,8 +220,8 @@
         "      images.append(row[1:])\n",
         "      \n",
         "    # Convert to numpy array\n",
-        "    labels = np.array(labels, dtype='str')\n",
-        "    images = np.array(images, dtype='float64')\n",
+        "    labels = np.array(labels, dtype='float')\n",
+        "    images = np.array(images, dtype='float')\n",
         "    images = images.reshape((-1,28,28))\n",
         "\n",
         "    ### END CODE HERE\n",
